--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
   font-family: "IBM Plex Sans", sans-serif;
   margin: 0px;
 }
+p {
+  font: inherit;
+}
 #root {
   font-family: "IBM Plex Sans", sans-serif;
 }
@@ -11,7 +14,6 @@ body {
   background-color: #191919;
 }
 .header__wrapper {
- 
   grid-template-columns: 20% 50% 20%;
   box-sizing: border-box;
   display: flex;
@@ -157,10 +159,10 @@ body {
 .landing__video {
   height: 575px;
   background-image: url(/static/image/Michelangelo_-_Creation_of_Adam.jpg);
+
   background-size: contain;
 }
 .courses__online {
-
   background-color: rgb(154, 150, 150);
   margin-top: -5px;
   padding: 148px 10%;
@@ -213,7 +215,7 @@ body {
   border-top-right-radius: 10px;
 }
 .course__content {
-  padding: 30px 10 0px;
+  padding: 30px 10px;
   position: relative;
 }
 .course__title {
@@ -290,11 +292,23 @@ body {
   display: flex;
   flex-direction: column;
 }
-.text__title {
+.text__title-while {
   font-size: 32px;
   font-weight: 600;
   line-height: normal;
   color: #fff;
+}
+.text__title-black {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: normal;
+  color: rgb(0, 0, 0);
+}
+.text__title-black_bold {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: normal;
+  color: rgb(0, 0, 0);
 }
 .online__footer__subtitle {
   font-size: 24px;
@@ -414,7 +428,7 @@ body {
   font-size: 72px;
   font-weight: 600;
   line-height: 1.31;
-  color: rgb(116, 23, 23);
+  color: rgb(225, 210, 210);
 }
 .online__header__body {
   position: absolute;
@@ -422,13 +436,282 @@ body {
   left: 10%;
   font-size: 18px;
   font-weight: 400;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
-.hide{
+.hide {
   opacity: 0;
   transition: 0.2s;
 }
-.introduction img{
- 
+
+.preview__overview {
+  width: 33vw;
+  font-size: 100%;
+}
+.h1,
+h2 {
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+}
+.preview__overview p {
+  font-weight: 400;
+  line-height: 1.78;
+}
+
+.preview__overview image {
+  width: 33vw;
+}
+.courses__preview__content {
+  position: absolute;
+  top: 280px;
+  left: 10%;
+}
+.landing__line {
+  width: 48px;
+  height: 8px;
+  background-color: #d42928;
+}
+.preview__header__title {
+  font-size: 72px;
+  font-weight: 600;
+  line-height: 1.31;
+  color: #fff;
+}
+.preview__header__body {
+  max-width: 505px;
+  padding-top: 32px;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+}
+.preview__btn {
+  margin-top: 48px;
+  padding: 12px 24px;
+  background-color: #d42928;
+  border-radius: 4px;
+  display: inline-flex;
+  align-items: center;
+  color: #fff;
+}
+.course_text_body {
+  margin-left: 4px;
+}
+.text {
+  margin-left: 16px !important;
+  color: #fff;
+}
+.preview__description {
+  padding: 148px 10% 172px;
+  display: grid;
+  grid-template-columns: 25% auto;
+  position: relative;
+  overflow: hidden;
+}
+.preview__overview {
+  width: 33vw;
+}
+.course__wrapper {
+  display: grid;
+  grid-template-columns: 25% auto;
+  padding: 148px 10%;
+  background-color: #d42928;
+  position: relative;
+  overflow: hidden;
+  margin-top: -5px;
+}
+
+.course__content {
+  display: flex;
+  flex-direction: column;
+}
+.course__name {
+  font-size: 64px;
+  font-weight: 300;
+  line-height: normal;
+  color: #fff;
+}
+.course__preview__video {
+  max-width: 728px;
+  max-height: 411px;
+  margin-top: 48px;
+}
+.player__container {
+  position: relative;
+  cursor: pointer;
+}
+.course__title__text {
+  margin-top: 72px;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: normal;
+  color: #fff;
+}
+.course__slide {
+  border-radius: 4px;
+  border: 1px solid #fff;
+  padding: 24px;
+  max-width: 728px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 32px;
+  cursor: pointer;
+  text-decoration: none;
+}
+.course__download__title {
+  margin-left: 12px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  font: inherit;
+}
+.course__chapter {
+  max-width: 728px;
+  margin-top: 24px;
+}
+.course__chapter__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px;
+  border: 1px solid #e99594;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #da4948;
+  position: relative;
+
+}
+.course__chapter__name{
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+
+}
+
+.dropdown a{
+  text-align: right;
+  color: #fff;
+}
+
+.dropdown{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px;
+  border: 1px solid #e99594;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #da4948;
+  position: relative;
+}
+.course__chapter__content{
+  transform: translateY(0);
+  max-height: 1000px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  opacity: 1;
+  padding-left: 54px;
+  padding-right: 24px;
+  border: 1px solid #e99594;
+  background-color: #b11615;
+  border-top: 0;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.course__lecture__wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 0;
+  cursor: pointer;
+}
+.course__lecture__detail {
+  display: flex;
+  align-items: center;
+}
+.course__lecture__name {
+  margin-left: 16px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+}
+.course__professor {
+  display: grid;
+  grid-template-columns: 25% auto;
+  padding: 148px 10%;
+  height: 882px;
+  background-image: url(./static/image/professor-background@2x.6df3d4b6\ \(1\).jpg);
+  background-size: cover;
+  position: relative;
+}
+.course__professor__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.course__professor__position {
+  margin-top: 8px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+}
+.text__body{
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+}
+.text__body_black{
+
+  font-size: 18px;
+  font-weight: 400;
+  color: rgb(0, 0, 0);
+}
+.text__title-black-bold {
+  font-size: 64px;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+}
+.professor_contact{
+  margin-top: 20px;
+}
+.professor_contact i{
+  margin-right: 30px;
+}
+.course__professor__detail {
+  margin-top: 72px;
+  max-width: 416px;
+}
+.course__professor__website {
+  display: inline;
+  margin-top: 25px;
+}
+.course__register {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 148px 10%;
+  background-color: #f5b423;
+  position: relative;
+  overflow: hidden;
+}
+.course__register__image {
+  max-width: 865px;
+  max-height: 524px;
+  width: auto;
+  height: auto;
+  z-index: 1;
+}
+.course__register__benefit {
+  margin-top: 48px;
+
+}
+.course__register__benefit__item {
+  display: flex;
+  margin-top: 24px;
+}
+.course__register__benefit__text{
+  text-align: center;
+  display: block;
+  margin-left: 24px;
 }
